--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -39,4 +39,46 @@
 
 .read-the-docs {
   color: #888;
+} */
+html {
+  font-size: 62.5%;
+}
+* {
+  list-style-type: none;
+  text-decoration: none;
+}
+body {
+  background-color: #002147;
+}
+.header {
+  color: #fff;
+  background: linear-gradient(
+    179.4deg,
+    rgb(12, 20, 69) -16.9%,
+    rgb(71, 30, 84) 119.9%
+  );
+  padding: 2rem 4rem;
+  border-radius: 20px;
+}
+.nav {
+  font-size: 3rem;
+  font-weight: 900;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.nav li {
+  cursor: pointer;
+  transition: all 0.5s;
+}
+.nav li:hover {
+  filter: drop-shadow(0.5rem 0.1rem rgb(21, 43, 190));
+  transform: scale(1.2);
+  gap: 8rem;
+}
+.type-nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  gap: 6rem;
 }
