--- a/src/App.css
+++ b/src/App.css
@@ -72,8 +72,10 @@ body {
   transition: all 0.5s;
 }
 .nav li:hover {
+  letter-spacing: 0.5rem;
   filter: drop-shadow(0.5rem 0.1rem rgb(21, 43, 190));
   transform: scale(1.2);
+
   gap: 8rem;
 }
 .type-nav {
@@ -81,4 +83,50 @@ body {
   align-items: center;
   justify-content: space-evenly;
   gap: 6rem;
+}
+main {
+  width: 1200px;
+  margin: 10rem auto;
+}
+.movies {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 5rem;
+}
+.movie {
+  cursor: pointer;
+  background-color: rgb(129, 109, 109);
+  border-radius: 20px;
+  padding: 1rem 2rem;
+  transition: transform 0.9s;
+}
+.movie:hover {
+  transform: scale(0.9);
+}
+.img-container img {
+  width: 100%;
+  height: 300px;
+  border-radius: 20px;
+}
+.info {
+  width: 100%;
+}
+.movie-name {
+  font-size: 3.5rem;
+  font-weight: 900;
+  text-align: center;
+  color: #01162d;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+.title {
+  font-size: 2.2rem;
+  color: #05011d;
+  text-align: center;
+}
+.description {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 1.2rem;
+  text-align: center;
+  margin-bottom: 2rem;
 }
