--- a/src/App.css
+++ b/src/App.css
@@ -236,6 +236,9 @@ main {
     width: 90%;
     margin: 0;
   }
+  .footer {
+    font-size: 2rem;
+  }
 }
 @media screen and (max-width: 800px) and (min-width: 677px) {
   .header {
